src/test/deca/syntax/valid/nonprovided/assign_expr_equals.deca
/*
    Description : test sur "assign_expr : EQUALS e2=assign_expr"

    Résultat : OK

*/
{
    x = 9;
}
