src/test/deca/syntax/invalid/nonprovided/assign_expr_equals.deca
/*
    Description : test sur "assign_expr : EQUALS e2=assign_expr"

    Résultat : rejeté

*/
{
    -1 || 42 = 9;
}
